fixed #tags-wrapper z-index - was being sent to back when opened with vimeo empty snippets video

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -13,7 +13,6 @@
 	    grid-area: snippets;
 	    width: 200px;
 	    justify-self: start;
-	    z-index: 1000;
 	    box-shadow: var(--boxBlueGlow);
 	}
 	
@@ -32,6 +31,8 @@
 	.snippet { margin-left: 15px; }
 	
 	#close-button { display: block; }
+	
+	.quickie { margin: 0; }
 	
 }
 /****************************************************************************/
